change readme + add gitignore

--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-<center><a href="http://blib.xe0.ru"><img src="http://blib.xe0.ru/index_logo.png" /></a></center>
-<div>Библиотека автономных и полуавтономных блоков, которые можно впилить в любой интерфейс.</div>
-<div>Есть как визуальные блоки для оформления чего-либо (например блок автогенерации таблицы из json-ответа сервера), так и блоки логики (b-blib - блок для подключения блоков)</div>
-<br />
-<h5>Функционал b-blib</h5>
-<div>blib.include('путь до блока', 'селектор контейнера') - основной метод подключения блока (css, js, шаблон блока)(в реализации: проверка кэша с дозагрузкой прочего функционала.... или незаметная передача оптимизированного кода клиенту с сохранением слепка в localStorage</div>
-<div>blib.css('путь к css') - подрубить таблицу стилей к шапке</div>
-<div>blib.js('путь к js') - подрубить файлы скриптов к шапке после формирования дом дерева стилей к шапке</div>
+<a href="http://blib.xe0.ru"> <img src="http://blib.xe0.ru/index_logo.png"> </a>
+Библиотека автономных и полуавтономных блоков, которые можно впилить в любой интерфейс.
+Есть как визуальные блоки для оформления чего-либо (например блок автогенерации таблицы из json-ответа сервера), так и блоки логики (b-blib - блок для подключения блоков)
 
-<div>blib.checkCache() - (в разработке) проверка кэша</div>
-<div>blib.vanishLoad() - (в разработке) подгрузка оптимизированного кода</div>
+Функционал b-blib
+blib.include('путь до блока', 'селектор контейнера') - основной метод подключения блока (css, js, шаблон блока)(в реализации: проверка кэша с дозагрузкой прочего функционала.... или незаметная передача оптимизированного кода клиенту с сохранением слепка в localStorage
+blib.css('путь к css') - подрубить таблицу стилей к шапке<
+blib.js('путь к js') - подрубить файлы скриптов к шапке после формирования дом дерева стилей к шапке
+
+blib.checkCache() - (в разработке) проверка кэша
+blib.vanishLoad() - (в разработке) подгрузка оптимизированного кода
