--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-<a href="http://blib.xe0.ru"> <img src="http://blib.xe0.ru/index_logo.png"> </a>
+<article>
+<a href="http://blib.xe0.ru">
+<img src="http://blib.xe0.ru/index_logo.png">
+</a>
 Библиотека автономных и полуавтономных блоков, которые можно впилить в любой интерфейс.
 Есть как визуальные блоки для оформления чего-либо (например блок автогенерации таблицы из json-ответа сервера), так и блоки логики (b-blib - блок для подключения блоков)
 
@@ -9,3 +12,4 @@ blib.js('путь к js') - подрубить файлы скриптов к ш
 
 blib.checkCache() - (в разработке) проверка кэша
 blib.vanishLoad() - (в разработке) подгрузка оптимизированного кода
+</article>
